# vaedb

./: .gitignore  Gemfile.rb  Makefile.in  README.md  TODO  bus.cpp  bus.h  config.h.in  configure  configure.in  context.cpp  context.h  json.hpp  logger.cpp  lru_cache.h  main.cpp  memcache_proxy.cpp  memcache_proxy.h  mysql_proxy.cpp  mysql_proxy.h  query.cpp  query.h  query_log.cpp  query_log.h  reaper.cpp  reaper.h  response.cpp  response.h  s3.cpp  server.cpp  server.h  session.cpp  session.h  site.cpp  site.h  util.cpp  vae.thrift  vae_db_handler.h
aclocal/: ax_boost_base.m4
bot/: bot.rb
cpp/: Makefile.in  bus.cpp  bus.h  configure  configure.in  context.cpp  context.h  logger.cpp  logger.h  lru_cache.h  main.cpp  memcache_proxy.cpp  memcache_proxy.h  memory_mgmt.cpp  memory_mgmt.h  mysql_proxy.cpp  mysql_proxy.h  query.cpp  query.h  query_log.cpp  query_log.h  reaper.cpp  reaper.h  response.cpp  response.h  s3.cpp  s3.h  session.cpp  session.h  site.cpp  site.h  util.cpp  util.h  vae_db_handler.cpp  vae_db_handler.h  vae_types.h.patch  verb_db_handler.cpp  verb_db_handler.h  verb_types.h.patch
db/: schema.sql
gen-cpp/: VaeDb.cpp  VaeDb.h  VaeDb_server.skeleton.cpp  VaeRubyd.cpp  VaeRubyd.h  VaeRubyd_server.skeleton.cpp  vae_constants.cpp  vae_constants.h  vae_types.cpp  vae_types.h
gen-php/: Types.php  VaeDb.php  VaeRubyd.php
gen-php/Thrift/: Types.php  VaeDb.php  VaeRubyd.php
gen-php/vae/: VaeDb.php  VaeRubyd.php  vae_types.php
gen-rb/: vae_constants.rb  vae_db.rb  vae_rubyd.rb  vae_types.rb
php/: client.php  vaedb_test.php  verbdb_test.php
rb/: Gemfile  vaerubyd.rb  vaerubyd_test.rb  verbrubyd.rb  verbrubyd_test.rb
rb/lib/: vae_rubyd_handler.rb  vaerubyd.rb  verb_rubyd_handler.rb  verbrubyd.rb
watchdog/: watchdog.rb
